[gd_scene load_steps=9 format=3 uid="uid://cx56wmhce6ys3"]

[ext_resource type="Script" path="res://Scripts/Buildtile.gd" id="1_7gifa"]
[ext_resource type="Texture2D" uid="uid://bg41ximuiq3uj" path="res://Assets/Grass.png" id="2_1h87d"]
[ext_resource type="Texture2D" uid="uid://dlio1f13tgfvj" path="res://Assets/Buildings.png" id="2_bq558"]
[ext_resource type="Texture2D" uid="uid://ds4u3s2adt76s" path="res://Assets/missile.png" id="4_1uu0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwuyg"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owftr"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo8bb"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1j762"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = 90.0
angle_max = 90.0
scale_min = 1.5
scale_max = 1.5
color = Color(1, 0.533333, 0, 1)

[node name="BuildTile" type="Node2D"]
scale = Vector2(0.9, 0.9)
script = ExtResource("1_7gifa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_1h87d")
hframes = 3

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_bq558")
hframes = 8

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_fwuyg")

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 1
offset_left = -7.0
offset_top = 4.0
offset_right = 50.0
offset_bottom = 15.0
scale = Vector2(0.25, 0.25)
theme_override_styles/background = SubResource("StyleBoxFlat_owftr")
theme_override_styles/fill = SubResource("StyleBoxFlat_mo8bb")
show_percentage = false

[node name="Fire" type="GPUParticles2D" parent="."]
visible = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_1j762")
texture = ExtResource("4_1uu0l")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
